tests/NormalTests/paczka1/fuzzy1/22909459.err
Error in line 11: 4EGe S443 903,3
Error in line 14: urabyBKN A213 99,8
Error in line 12: 4EGe A213 34,2
Error in line 15: urabyBKN S443 26,5
Error in line 17: 4EGe S195 69,6
Error in line 21: 4EGe A213 21,4
Error in line 26: lbVb2MBNWfw A213 63,9
